Closed Bug 1425553 Opened 6 years ago Closed 6 years ago

Crash in java.lang.UnsatisfiedLinkError: at org.mozilla.gecko.GeckoEditableChild.onKeyEvent(Native Method)

Categories

(GeckoView :: General, defect)

59 Branch
Unspecified
Android
defect
Not set
critical

Tracking

(firefox-esr52 unaffected, firefox57 unaffected, firefox58 unaffected, firefox59blocking fixed)

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 blocking fixed

People

(Reporter: calixte, Assigned: jchen)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-6eb1cf63-7327-4389-afcf-1094e0171215.
=============================================================

Top 10 frames of crashing thread:

0 libxul.so GeckoAppShellSupport::ReportJavaCrash widget/android/nsAppShell.cpp:276
1 libxul.so mozilla::jni::NativeStub<mozilla::java::GeckoAppShell::ReportJavaCrash_t, GeckoAppShellSupport, mozilla::jni::Args<const mozilla::jni::Ref<mozilla::jni::TypedObject<_jthrowable*>, _jthrowable*>&, const mozilla::jni::StringParam&> >::Wrap<&GeckoAppShellSupport::ReportJavaCrash> widget/android/jni/Natives.h:778
2 data@app@org.mozilla.fennec_aurora-1@base.apk@classes.dex data@app@org.mozilla.fennec_aurora-1@base.apk@classes.dex@0x776815 
3 dalvik-non moving space (deleted) dalvik-non moving space @0x9b26 
4 dalvik-main space (deleted) dalvik-main space @0x167fe 
5 dalvik-main space (deleted) dalvik-main space @0x3c0bbe 
6 dalvik-main space (deleted) dalvik-main space @0x486dde 
7 system@framework@boot.art system@framework@boot.art@0x897fb6 
8 libart.so libart.so@0xa1c47 
9 dalvik-main space (deleted) dalvik-main space @0x3c0bbe 

=============================================================

There are 41 crashes in nightly 59 with buildid 20171215100231.
:jchen, could you investigate please ?
Flags: needinfo?(nchen)
Crash Signature: [@ java.lang.UnsatisfiedLinkError: at org.mozilla.gecko.GeckoEditableChild.onKeyEvent(Native Method)] → [@ java.lang.UnsatisfiedLinkError: at org.mozilla.gecko.GeckoEditableChild.onKeyEvent(Native Method)] [@ java.lang.UnsatisfiedLinkError: Native method not found: org.mozilla.gecko.GeckoEditableChild.onKeyEvent:(IIIIIJIIIZLandroid/view/KeyEvent;)V at org.…
This is a startup crash, marking it as tracking.
The signature "java.lang.UnsatisfiedLinkError: at org.mozilla.gecko.GeckoEditableChild.onKeyEvent(Native Method)" is ranked #2 in FennecAndroid top-crashers.
Keywords: topcrash
#1 topcrash in Nightly 20171215100231, with 209 occurrences, which is pretty high.
Assignee: nobody → nchen
Status: NEW → ASSIGNED
Flags: needinfo?(nchen)
Comment on attachment 8937507 [details]
Bug 1425553 - Only process input calls when Gecko is ready;

https://reviewboard.mozilla.org/r/208186/#review214248
Attachment #8937507 - Flags: review?(esawin) → review+
Pushed by nchen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d26a8dd71092
Only process input calls when Gecko is ready; r=esawin
https://hg.mozilla.org/mozilla-central/rev/d26a8dd71092
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 59
See Also: → 1471692
Product: Firefox for Android → GeckoView
Version: Firefox 59 → 59 Branch
Target Milestone: Firefox 59 → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: