Bug 1425553 - Only process input calls when Gecko is ready; r=esawin

Track the Gecko ready state in TextInputController through
GeckoSession's NativeQueue, and only pass through input calls when Gecko
is ready.

MozReview-Commit-ID: KugQ6whg2QA